--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lqip-modern": "^1.2.0",
     "next": "^12.1.1",
     "next-api-og-image": "^2.2.1",
+    "next-seo": "^5.4.0",
     "node-fetch": "^2.6.1",
     "notion-client": "^6.12.6",
     "notion-types": "^6.12.6",
