add contentful details

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@
 # @see https://github.com/rolodato/dotenv-safe for more details.
 # ------------------------------------------------------------------------------
 
+# Mandatory (for image gallery)
+CONTENTFUL_SPACE_ID=
+CONTENTFUL_ACCESS_TOKEN=
+CONTENTFUL_PREVIEW_ACCESS_TOKEN=
+
 # Optional (for fathom analytics)
 #NEXT_PUBLIC_FATHOM_ID=
 
