--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@keyvhq/redis": "^1.6.10",
     "@react-icons/all-files": "^4.1.0",
     "classnames": "^2.3.1",
+    "contentful": "^9.1.28",
     "date-fns": "^2.28.0",
     "expiry-map": "^2.0.0",
     "fathom-client": "^3.4.1",
