--- a/package.json
+++ b/package.json
@@ -43,19 +43,23 @@
     "next-api-og-image": "^2.2.1",
     "next-seo": "^5.4.0",
     "node-fetch": "^2.6.1",
-    "notion-client": "^6.12.6",
+    "notion-client": "^6.12.9",
     "notion-types": "^6.12.6",
-    "notion-utils": "^6.12.6",
+    "notion-utils": "^6.12.9",
     "p-map": "^5.3.0",
     "p-memoize": "^6.0.1",
     "posthog-js": "^1.20.2",
     "react": "^17.0.2",
     "react-body-classname": "^1.3.1",
     "react-dom": "^17.0.2",
-    "react-notion-x": "^6.12.7",
+    "react-hook-dimensions": "^1.4.0",
+    "react-intersection-observer": "^9.1.0",
+    "react-notion-x": "^6.12.9",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "styled-components": "^5.3.5",
+    "swiper": "^8.1.4"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.0",
